@@ -1,3 +1,7 @@
+2011-05-17  Ivana Hristova <ivana.hristova@cern.ch>
+	* Tag as TrigT1CaloMonitoring-00-08-07
+	* PPrMon: Pad numbers with zeros in histogram names.
+
 2011-05-11  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
 	* Tag as TrigT1CaloMonitoring-00-08-06
         * Move TrigT1CaloLWHistogramTool to new package to
